[package]
name = "sandbox_rust"
version = "0.1.0"
authors = ["Per Lönn Wege <per.loenn.wege@gmail.com>"]
build = "build.rs"

[dependencies]
cgmath = "0.15.0"
libc = "0.2.0"
glfw-sys = { path = "deps/glfw-sys", version = "0.1.0" }
stb_image-sys = { path = "deps/stb_image-sys", version = "0.1.0" }

[build-dependencies]
gl_generator = "0.5.0"
